<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="5dp">

    <TextView
        android:id="@+id/lmDescLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/namelm"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lm_desc"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enterDesc"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_below="@id/lmDescLabel"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/createbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterDesc"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="onDlgCreate"
        android:text="@string/create" />

    <Button
        android:id="@+id/canceltbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterDesc"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/createbtn"
        android:backgroundTint="#CD618A"
        android:onClick="onDlgCancel"
        android:text="@string/cancel" />

    <EditText
        android:id="@+id/namelm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lon"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/longitude"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_longit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/lon"
        android:layout_marginRight="0dp"
        android:layout_toRightOf="@id/lon"
        android:text="TextView"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/lon"
        android:layout_alignParentEnd="false"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:text="@string/latitude"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_latit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/lat"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/lat"
        android:text="TextView"
        android:textSize="12sp" />

</RelativeLayout>