<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="#00FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:cropToPadding="true"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/username_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_et"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="false"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/reenterpass_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_et"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="false"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/reenterpass_et_text_ReEnterPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reenterpass_et">

        <View
            android:id="@+id/marginRight"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onLogin"
            android:text="@string/login"
            />

        <Button
            android:id="@+id/NewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onCreateNewUserMain"
            android:text="@string/newUser"
            />

        <View
            android:id="@+id/marginLeft"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>


</RelativeLayout>
